共有ライブラリのコンパイルに成功

--- a/othello01.ipynb
+++ b/othello01.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import time\n",
@@ -18,6 +26,16 @@
     "from PyQt5.QtCore import *\n",
     "import pyqtgraph as pg\n",
     "\n",
+    "import share_lib01 as sl\n",
+    "print(sl.SPRM_LEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 共有ライブラリ読み込み\n",
     "# このライブラリがある場所に移動して実行する\n",
     "share02 = ctypes.cdll.LoadLibrary(\"./share02.so\")\n",
@@ -58,7 +76,7 @@
     "getVector.restype = None\n",
     "getVector.argtypes = (FloatArray64,)\n",
     "\n",
-    "# ライブラリの関数を使いやすく包みたい\n",
+    "# ライブラリの関数を使いやすくする\n",
     "# 引数には欲しい世代番号を与える\n",
     "# ファイル名で取り出す\n",
     "def getTopSprmWrap(fname):\n",
@@ -95,11 +113,9 @@
     "    def __init__(self, parent=None):\n",
     "        super(Widget, self).__init__(parent)\n",
     "        self.setWindowTitle(\"Othello\")\n",
-    "        # ウィンドウの位置と大きさ\n",
-    "        # サイズはマスから計算\n",
+    "        # ウィンドウの位置と大きさをマスから計算\n",
     "        self.setGeometry(100, 100, self.SQLEN * 11 + 500, self.SQLEN * 11)\n",
-    "        # 背景カラー(微妙にグレー)\n",
-    "        #self.setStyleSheet(\"background:#eeeeee\")\n",
+    "        # 背景カラー白\n",
     "        self.setStyleSheet(\"background:#ffffff\")\n",
     "        # タグからマスの中心座標に変換したい\n",
     "        # 需要が出てきそうなのでマスの左上の座標も追加する\n",
@@ -815,7 +831,6 @@
     "                    mn = pt\n",
     "                    best_tag = tag\n",
     "            print(mn, best_tag)\n",
-    "        # 返り値を間違えていた\n",
     "        return best_tag\n",
     "    \n",
     "    # C言語の共有ライブラリで定義された関数で指し手を決定する\n",
@@ -826,32 +841,14 @@
     "        # 文字列に変換\n",
     "        # ord(\"h\") = 104, ord(\"8\") = 56\n",
     "        tag = chr(104 - c_sub % 16 // 2) + chr(56 - c_sub // 16)\n",
-    "        return tag\n"
+    "        return tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sonoda/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3426: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Application(QApplication):\n",
     "    def __init__(self):\n",
@@ -907,15 +904,7 @@
     "\n",
     "    def run(self):\n",
     "        self.gui.show()\n",
-    "        sys.exit(self.exec_())\n",
-    "\n",
-    "def main():\n",
-    "    setUsePrm1L(b\"prm/l1r050_06_rlt_uni_rd001/l1r050_06_rlt_uni_rd001_g100.bin\", 50)\n",
-    "    app = Application()\n",
-    "    app.run()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "        sys.exit(self.exec_())"
    ]
   },
   {
@@ -923,7 +912,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def main():\n",
+    "    setUsePrm1L(b\"prm/l1r050_06_rlt_uni_rd001/l1r050_06_rlt_uni_rd001_g100.bin\", 50)\n",
+    "    app = Application()\n",
+    "    app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
