GUI 作成には jupyter 向かない? ただ慣れていないってのもある

--- a/othello01.ipynb
+++ b/othello01.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'share_lib01' has no attribute 'ABCDE'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-7596f8d40037>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mshare_lib01\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mABCDE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'share_lib01' has no attribute 'ABCDE'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import time\n",
@@ -39,20 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "slw = sl.ShareLibWrap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 共有ライブラリ読み込み\n",
     "# このライブラリがある場所に移動して実行する\n",
-    "share02 = ctypes.cdll.LoadLibrary(\"./share02.so\")\n",
     "share01 = ctypes.cdll.LoadLibrary(\"./share01.so\")\n",
     "# c_float が64個の配列型を定義\n",
     "FloatArray64 = ctypes.c_float * 64\n",
     "IntArray64 = ctypes.c_int32 * 64\n",
-    "\n",
-    "# 共有ライブラリを使う際の初期化\n",
-    "# これが無いと不具合の可能性大\n",
-    "share02.initPy()\n",
-    "\n",
-    "# デバッグ関数\n",
-    "#share01.sortTest()\n",
     "\n",
     "setSeed = share01.setSeedPy\n",
     "setSeed.restype = None\n",
@@ -73,14 +62,6 @@
     "getVector = share01.getVectorPy\n",
     "getVector.restype = None\n",
     "getVector.argtypes = (FloatArray64,)\n",
-    "\n",
-    "# ライブラリの関数を使いやすくする\n",
-    "# 引数には欲しい世代番号を与える\n",
-    "# ファイル名で取り出す\n",
-    "def getTopSprmWrap(fname):\n",
-    "    f_arr_c = FloatArray64()\n",
-    "    getTopSprm(fname.encode(), f_arr_c)\n",
-    "    return list(f_arr_c)\n",
     "\n",
     "def getVectorWrap():\n",
     "    f_arr_c = FloatArray64()\n",
@@ -133,7 +114,7 @@
     "        # まだ使い道無いからスタートフラグも兼ねるか\n",
     "        self.end_flag = True\n",
     "        # キャンバスのマウスクリック動作のロックフラグ\n",
-    "        # AIのターンで勝手に操作出来ないようにする予定\n",
+    "        # AIのターンで勝手に操作出来ないようにする\n",
     "        self.press_lock = False\n",
     "        # 指し手を決定する際のシード値\n",
     "        # いつかGUIで設定できるようにする?\n",
@@ -176,8 +157,12 @@
     "        #self.use_sprm = getTopSprmWrap(\"prm//sprm_vsrand//sprm_vsrand100.bin\")\n",
     "        #self.use_sprm = getTopSprmWrap(\"prm//sprm_corner0.5neg_100.bin\")\n",
     "        #self.use_sprm = getTopSprmWrap(\"prm//sprm050_06_rlt_1p_rd005//sprm050_06_rlt_1p_rd005_g100.bin\")\n",
-    "        # 色設定方法を変更したのでエラーは起きなくなった\n",
-    "        self.use_sprm = getVectorWrap()\n",
+    "        #self.use_sprm = getVectorWrap()\n",
+    "        fname = slw.makeSprmFileNameRankGeoProgWrap(50, 0, 3, 5, 123, 0.01, 100)\n",
+    "        print(fname)\n",
+    "        slw.setSPRM_EFFWrap(fname, 1, 50, 1)\n",
+    "        sl.showSPRM_EFF()\n",
+    "        self.use_sprm = slw.getSPRM_EFFWrap()\n",
     "        # ボタン等設定\n",
     "        self.setButtons()\n",
     "        self.setRadioButtons()\n",
@@ -225,12 +210,10 @@
     "    \n",
     "    def _printBoard(self, board):\n",
     "        moji = \"\"\n",
-    "        # 縦\n",
-    "        for y in range(9, 81, 9):\n",
+    "        for y in range(9, 81, 9): # 縦\n",
     "            # 文字列の先頭を改行文字にする\n",
     "            moji = \"\\n\" + moji\n",
-    "            # 横\n",
-    "            for x in range(1, 9):\n",
+    "            for x in range(1, 9): # 横\n",
     "                # 文字列の先頭に加えてゆく\n",
     "                moji = \"{:1d} \".format(board[x + y]) + moji\n",
     "        print(moji)\n",
@@ -268,7 +251,7 @@
     "        self.start_button.setFont(font)\n",
     "        self.start_button.resize(140, 50)\n",
     "        self.start_button.move(250, 820)\n",
-    "        # クリック時実行関数\n",
+    "        # クリック時実行関数を設定\n",
     "        self.start_button.clicked.connect(self.startClicked)\n",
     "    \n",
     "    # グラフ作成\n",
@@ -302,7 +285,7 @@
     "        gpen = pg.mkPen((0, 0, 255), width=2)\n",
     "        # 曲線オブジェクト?\n",
     "        # これでデータ書き換える\n",
-    "        # このときはデータ与えなくてもいいらしい\n",
+    "        # 最初はデータ与えなくてもいいらしい\n",
     "        self.curve = self.graph.plot(pen=gpen, name=\"point\")\n",
     "        # データ初期化\n",
     "        self.setInitGraph()\n",
@@ -349,8 +332,6 @@
     "        # 初期値は人\n",
     "        self.rbutton1.setChecked(True)\n",
     "        # プレイヤー変更は片方のラジオボタンだけ見れば大丈夫\n",
-    "        # そもそもラジオボタンよりチェックボックスの方がよかったのでは?\n",
-    "        # それは後々考えよう\n",
     "        self.rbutton1.toggled.connect(lambda : self.detPlayer(0))\n",
     "\n",
     "        # フォントの決め方を変える\n",
@@ -441,25 +422,21 @@
     "    # テストボタンが押された\n",
     "    # 状態の切り替えのみ行なう\n",
     "    def testClicked(self):\n",
-    "        # 通常に戻す\n",
-    "        if self.test_flag:\n",
+    "        if self.test_flag: # 通常に戻す\n",
     "            self.test_flag = False\n",
-    "            self.update()\n",
-    "            return\n",
-    "        # テストモードにする\n",
-    "        self.test_flag = True\n",
+    "        else: # テストモードにする\n",
+    "            self.test_flag = True\n",
     "        self.update()\n",
     "    \n",
     "    # ペイント時にはここを実行しなければならない\n",
     "    # self.update() で実行されるらしいことを忘れていた\n",
     "    def paintEvent(self, event):\n",
     "        # テスト時\n",
-    "        if self.test_flag:\n",
-    "            canvas = QPainter(self)\n",
-    "            canvas.drawImage(0, 0, self.test_img)\n",
-    "            return\n",
     "        canvas = QPainter(self)\n",
-    "        canvas.drawImage(0, 0, self.img)\n",
+    "        if self.test_flag:\n",
+    "            canvas.drawImage(0, 0, self.test_img)\n",
+    "        else:\n",
+    "            canvas.drawImage(0, 0, self.img)\n",
     "    \n",
     "    # 押された座標取得\n",
     "    def mousePressEvent(self, event):\n",
@@ -844,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +865,6 @@
     "            background:#ffff00\")\n",
     "        self.show_full_button.resize(100, 50)\n",
     "        self.show_full_button.clicked.connect(self.gui.showFullScreen)\n",
-    "    \n",
     "\n",
     "    # 終了ボタン\n",
     "    def clickEndButton(self):\n",
@@ -907,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,14 +895,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'main' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-972361fa1b80>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'main' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
